--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="main">
         <div id="article">
             <div id="section-1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt veritatis animi odio debitis illum, repellat similique cum! Aperiam sint doloribus dignissimos voluptates labore numquam dolore error modi consequuntur, molestias repudiandae!
+                Lorem ipsum dolor sit amet <span style="color: blue;">consectetur</span> adipisicing elit. Sunt veritatis animi odio debitis illum, repellat similique cum! Aperiam sint doloribus dignissimos voluptates labore numquam dolore error modi consequuntur, molestias repudiandae!
             </div>
             <div id="section-2">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt esse praesentium aut, fuga libero maxime rerum ex commodi nulla a eaque, doloribus dolorum quas nam est similique deleniti aperiam perferendis.
