--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div style="background-color: red; color: white;">HOLA</div>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ab in <span style="color: blue;">amet</span> iste tempora sunt ea, labore laudantium veniam eos perferendis quidem quae expedita earum velit nam, nemo harum ex.</P> -->
     <div id="header">
+        <h1>Mateo Gandarillas Navia</h1>
         <div id="nav">
             <ul>
                 <li>Enlcace 1</li>
